--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/Waterfall/ImageWaterfall.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/Waterfall/ImageWaterfall.razor
@@ -30,7 +30,7 @@
 </div>
 
 <EmptyResult Show="Value.Count == 0"
-             Text="@(I18n.T("Setting.Display.Diary.Image.NoImage"))">
+             Text="@(I18n.T("FileBrowse.Image.NoImage"))">
 </EmptyResult>
 
 <PreviewImageDialog @bind-Visible="showPreviewImage"
