--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/Waterfall/VideoWaterfall.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/Waterfall/VideoWaterfall.razor
@@ -31,5 +31,5 @@
 </div>
 
 <EmptyResult Show="Value.Count == 0"
-             Text="@(I18n.T("Setting.Display.Diary.Video.NoVideo"))">
+             Text="@(I18n.T("FileBrowse.Video.NoVideo"))">
 </EmptyResult>
