🐛 fix(AlertService): On mobile, the position of alert is incorrect

--- a/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
@@ -2,11 +2,9 @@
 @namespace SwashbucklerDiary.Rcl.Pages
 @inherits ImportantComponentBase
 
-@if (enableMarkdown)
+@if (enableMarkdown && IsCurrentPage)
 {
-    <OnlyThisPage>
-        <link href="@cssHref" />
-    </OnlyThisPage>
+    <link href="@cssHref" rel="stylesheet" />
 }
 
 <MyAppBar>
