🐛 fix(TagCard): Icon not aligned with text

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
@@ -26,6 +26,7 @@
         <MListItemAction @onclick:stopPropagation="true">
             <MButton @attributes="@activatorAttributes"
                      Icon="true"
+                     Small="true"
                      OnClick="OpenMenu">
                 <MIcon>mdi-pencil-outline</MIcon>
             </MButton>
