💄 style(MListItem): Adjusting the distance between icons and text

--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
@@ -292,3 +292,11 @@
     .m-input--radio-group--row .m-input--radio-group__input > * {
         flex-grow: 1;
     }
+
+.m-application--is-ltr .m-card .m-list-item__action:first-child, .m-application--is-ltr .m-card .m-list-item__icon:first-child {
+    margin-right: 24px;
+}
+
+.m-application--is-rtl .m-card .m-list-item__action:first-child, .m-application--is-rtl .m-card .m-list-item__icon:first-child {
+    margin-left: 24px;
+}
