🔥 chore: arrange code

--- a/src/SwashbucklerDiary.Rcl/Pages/SearchPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/SearchPage.razor
@@ -7,8 +7,7 @@
         <MIcon>mdi-arrow-left</MIcon>
     </MButton>
 
-    <SearchTextField @bind-Visible="showSearch"
-                     @bind-Value="search"
+    <SearchTextField @bind-Value="search"
                      Placeholder="@(I18n.T("Search.Please enter diary keywords"))"
                      OnChanged="UpdateDiariesAsync">
     </SearchTextField>
