♻️ refactor: remove MultiTabList, restore the previous tabs

--- a/src/SwashbucklerDiary.Maui/Pages/Export/ExportPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Export/ExportPage.razor
@@ -11,9 +11,9 @@
         </MIcon>
     </MButton>
 
-    <MultiTabList @bind-Value="tab"
+    <MyTabs @bind-Value="tab"
                   Items="tabNames">
-    </MultiTabList>
+    </MyTabs>
 
     <MSpacer></MSpacer>
 </MyAppBar>
