--- a/src/SwashbucklerDiary.Rcl/Pages/FileBrowsePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/FileBrowsePage.razor
@@ -3,9 +3,9 @@
 @inherits ImportantComponentBase
 
 <MyAppBar>
-    <MultiTabList @bind-Value="tab"
+    <MyTabs @bind-Value="tab"
                   Items="tabNames">
-    </MultiTabList>
+    </MyTabs>
 
     <MSpacer></MSpacer>
 
