--- a/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
@@ -3,9 +3,9 @@
 @inherits DiariesPageComponentBase
 
 <MyAppBar>
-    <MultiTabList @bind-Value="tab"
+    <MyTabs @bind-Value="tab"
                   Items="tabNames">
-    </MultiTabList>
+    </MyTabs>
 
     <MSpacer></MSpacer>
 
