--- a/src/SwashbucklerDiary.WebAssembly/Page/Backups/BackupsPage.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Page/Backups/BackupsPage.razor
@@ -10,9 +10,9 @@
         </MIcon>
     </MButton>
 
-    <MultiTabList @bind-Value="tab"
+    <MyTabs @bind-Value="tab"
                   Items="tabNames">
-    </MultiTabList>
+    </MyTabs>
 
     <MSpacer></MSpacer>
 </MyAppBar>
