🐛 fix: Style error  on iOS and iPad

--- a/src/SwashbucklerDiary.Rcl/Layout/MainNavDrawer/MainLayoutNavDrawer.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainNavDrawer/MainLayoutNavDrawer.razor
@@ -5,7 +5,8 @@
                    Value="Show"
                    Stateless="true"
                    MiniVariant="true"
-                   MiniVariantWidth="76">
+                   MiniVariantWidth="76"
+                   Style="top:initial !important;">
     <MList Nav>
         @foreach (var item in Items)
         {
