--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/Waterfall/VideoWaterfall.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/Waterfall/VideoWaterfall.razor
@@ -14,7 +14,7 @@
     {
         <MInfiniteScroll Style="width:100%;"
                          OnLoad="@OnLoad"
-                         Parent="ScrollElement"
+                         Parent="@($"#{ScrollElementId}")"
                          EmptyText="@(string.Empty)"
                          LoadingText="@(string.Empty)">
             <LoadMoreContent Context="load">
