--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/Waterfall/ImageWaterfall.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/Waterfall/ImageWaterfall.razor
@@ -1,5 +1,5 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
-@inherits WaterfallBase
+@inherits MediaWaterfallBase
 
 <div>
     <wc-waterfall @ref="elementReference" gap="@Gap" cols="@Cols">
