--- a/src/SwashbucklerDiary.Rcl/Pages/FileBrowsePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/FileBrowsePage.razor
@@ -38,7 +38,7 @@
     <SwiperTabItem>
         <MContainer Class="my-container"
                     Fluid="true">
-            @I18n.T("ToDo.Title")
+            <AudioCardList Value="audioResources"></AudioCardList>
         </MContainer>
     </SwiperTabItem>
     <SwiperTabItem>
