--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Achievement/AchievementCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Achievement/AchievementCard.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Pages
 @inherits MyComponentBase
 
-<MCard Class="mb-5 my-sm-5 py-sm-3 achievement-card"
+<MCard Class="py-sm-3"
        Elevation="0"
        Rounded="@("lg")"
        Ripple="false">
