--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Achievement/AchievementPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Achievement/AchievementPage.razor
@@ -25,7 +25,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <div class="d-flex justify-space-between flex-wrap">
+    <div class="adaptive-card-container">
         @foreach (var item in achievements)
         {
             <AchievementCard @key="item"
