--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 @inherits CardComponentBase<TagModel>
 
-<MCard Class="mb-5 my-tag-card elevation-sm-2--active"
+<MCard Class="mb-5 tag-card elevation-sm-2--active"
        Elevation="0"
        Ripple="false"
        Rounded="@("lg")"
