--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -481,21 +481,9 @@ html {
     opacity: .8;
 }
 
-.theme--light.m-btn.m-btn--readonly {
-    color: rgba(0,0,0,.87) !important;
+.m-btn--readonly {
+    pointer-events: none;
 }
-
-    .theme--light.m-btn.m-btn--readonly .m-btn__loading, .theme--light.m-btn.m-btn--readonly .m-icon {
-        color: rgba(0,0,0,.87) !important;
-    }
-
-.theme--dark.m-btn.m-btn--readonly {
-    color: #fff !important
-}
-
-    .theme--dark.m-btn.m-btn--readonly .m-btn__loading, .theme--dark.m-btn.m-btn--readonly .m-icon {
-        color: #fff !important
-    }
 
 .preview-image-dialog--toolbar {
     z-index: 2;
