🔥 chore: arrange code

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/RelatedOSPPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/RelatedOSPPage.razor
@@ -8,7 +8,7 @@
 
 <ScrollContainer>
     <div class="adaptive-card-container">
-        @foreach (var item in oSPs)
+        @foreach (var item in openSourceProjects)
         {
             <MCard @key="item"
                    Class="py-sm-3"
