--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
@@ -61,5 +61,5 @@
              TItemValue="string"
              TItem="KeyValuePair<string,string>"
              OnChange="DiaryCardDateFormatChanged"
-             Items="DiaryCardDateFormats">
+             Items="diaryCardDateFormats">
 </RadioDialog>
