💄 style: Remove incorrect styles

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/SearchTextField/SearchTextField.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/SearchTextField/SearchTextField.razor
@@ -14,6 +14,7 @@ else
                 Value="Value"
                 ValueChanged="InternalSearchChanged"
                 Class="rounded-lg"
+                BackgroundColor="transparent"
                 Solo="true"
                 Flat="true"
                 Autofocus="true"
