--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/TextareaEdit/TextareaEdit.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/TextareaEdit/TextareaEdit.razor
@@ -6,6 +6,7 @@
            Class="@($"{Class} user-select flex-grow-1 flex-column")"
            Solo="true"
            Flat="true"
+           BackgroundColor="transparent"
            HideDetails="@("auto")"
            NoResize="true"
            spellcheck="false"
