--- a/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
@@ -18,6 +18,7 @@
                         Readonly="true"
                         Solo="true"
                         Flat="true"
+                        BackgroundColor="transparent"
                         HideDetails="@("auto")"
                         PrependIcon="mdi-calendar">
             </MTextField>
