--- a/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
@@ -97,6 +97,7 @@
                     Solo="true"
                     Flat="true"
                     TValue="string"
+                    BackgroundColor="transparent"
                     HideDetails="@("auto")"
                     Dense="true"
                     spellcheck="false"
