🐛 fix(LocationCard): can not display menu

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCardList.razor
@@ -54,3 +54,8 @@
              Title="@(I18n.T("Share.Sort"))"
              Items="SortItems">
 </RadioDialog>
+
+<MultiMenu @ref="multiMenu"
+           @bind-Visible="ShowMenu"
+           DynamicListItems="menuItems">
+</MultiMenu>
